# slope

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/app/ecs/: component.cpp  component.hpp  entity.cpp  entity.hpp  entity_view.cpp  entity_view.hpp  system.hpp  world.cpp  world.hpp
app/app/render/: camera.cpp  camera.hpp  config.hpp  debug_drawer_impl.cpp  debug_drawer_impl.hpp  default_shaders.cpp  default_shaders.hpp  line.cpp  line.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render.cpp  render.hpp  render_system.cpp  render_system.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp
app/app/resource/: mesh_manager.cpp  mesh_manager.hpp  resource_cache.cpp  resource_cache.hpp  texture_manager.cpp  texture_manager.hpp
app/app/scene/: physics.cpp  physics.hpp  physics_system.cpp  physics_system.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp  ui_overlay_system.cpp  ui_overlay_system.hpp
app/app/system/: app.cpp  app.hpp  input.hpp  resource_manager.cpp  resource_manager.hpp  utils.cpp  utils.hpp
samples/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt  hello_world.cpp
samples/minimal_example/: CMakeLists.txt
samples/minimal_example/minimal_example/: minimal_example.cpp
samples/playground/: CMakeLists.txt
samples/playground/playground/: demos.cpp  demos.hpp  helpers.cpp  helpers.hpp  playground.cpp
slope/: CMakeLists.txt
slope/slope/collision/: aabb.hpp  (+25 more)
tools/: CMakeLists.txt
tools/asset_importer/: CMakeLists.txt  asset_importer.cpp
(+81 files in other folders)
